--- a/react-calculator/package.json
+++ b/react-calculator/package.json
@@ -2,6 +2,7 @@
   "name": "react-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://saadulde45.github.io/react-calculator",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -11,6 +12,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   }
 }
