--- a/react-calculator/package.json
+++ b/react-calculator/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://saadulde45.github.io/react-calculator",
+  "devDependencies": {
+    "gh-pages": ""
+  },
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
