--- a/react-calculator/public/manifest.json
+++ b/react-calculator/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React Calculator",
+  "name": "A simple calculator made in React",
   "icons": [
     {
       "src": "favicon.ico",
